kubernetes-h/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-spring-maven-deployment
  labels:
    app: spring-label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-label
  template:
    metadata:
      labels:
        app: spring-label
    spec:
      containers:
      - name: docker-spring-maven
        image: ashurana31/springboot-docker-maven:0.0.1-SNAPSHOT
        ports:
        - containerPort: 8080
